Restructured files and externalised environment variabled for java runtime to file.